test_scripts/errors/float_conversion_fail.stderr
 1 | float("not a number");
     ^^^^^^^^^^^^^^^^^^^^^
Error: Cannot convert string 'not a number' to float
